--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "mocha": "5.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^1.1.3"
+  },
+  "dependencies": {
+    "npm": "^8.5.4",
+    "test": "^0.6.0"
   }
 }
